Version 1.23.0 *
==================
- Added storing of the fold state for known source files.
- Improved connect editor workflow by linking agent and option name to corresponding entry in connect document with `F1` hotkey

Version 1.22.3
==================
- Fixed search result duplicates when using search in `All Files`, `This Project` or `Open Tabs`.
- Fixed 'Run with debugger' behaves like 'Step start with debugger'.
- Fixed behavior of "Save as ..." for project files (*.gsp).
- Fixed unintended change of main file on project open.
- Fixed Studio can't find GAMS when starting MIRO.
- Fixed 'Close except visible' tabs, before the tab which shall stay open has been closed.
- Fixed crash of the GDX Viewer, when GDXDIFF has been used multiple times in a row.
- Improved Studio behavior when files are missing after a GAMS run error.
- Improved log messages when interrupting a GAMS process.
- Upgraded to Qt 6.9.3.

Version 1.22.2
==================
- Fixed incorrect ESC key behavior in Parameter File Editor, Solver Option Editor, and GAMS User Configuration Editor.
- Fixed S&R dialog wildcard include and exclude file filters, before they did not match all expected files.
- Fixed that changes to command line parameters were lost when changing the main file.
- Fixed that Studio can't start more than 11 GAMS jobs in parallel.
- Fixed update modification state when the 'Dynamic main file' setting has changed.
- Fixed incorrect behavior of solver option editor
   - editing an empty string value for a string option with a defined default value no longer replaced by the comment. 
   - dragging and dropping an option no longer adding multiple rows but a single row of options.
   - replacing an existing option row by drag and drop no longer crashed Studio.
- Improved behavior of solver option editor and Parameter File Editor
   - double clicking an enumerated value of an option adds the description of the enumerated value instead of the option to the comment column.