@@ -55,6 +55,8 @@ void DescriptionDialog::keyPressEvent(QKeyEvent *event)
             ui->textEdit->setFont(mDefaultFont);
         }
     }
+    if (event->key() == Qt::Key_Enter || event->key() == Qt::Key_Return || event->key() == Qt::Key_Escape)
+        close();
 }
 
 }
