@@ -1,6 +1,7 @@
 Version 1.23.0 *
 ==================
 - Added storing of the fold state for known source files.
+- Added keyboard navigation and selection to the tables of the model library explorer.
 - Improved connect editor workflow by linking agent and option name to corresponding entry in connect document with `F1` hotkey
 
 Version 1.22.3
